--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -1,3 +1,12 @@
+ @media screen and (max-width:1366px) {
+     .el-table {
+         &.middletable {
+             height: auto!important;
+         }
+         min-height: 180px;
+     }
+ }
+ 
  @media screen and (max-width:768px) {
      .comheight {
          height: auto!important;
@@ -16,48 +25,55 @@
      .dragright {
          width: 100%!important;
      }
-     .mobilewrapper{
-        &.screenbg{padding:20px 0 }
-        &.userwarp{
-            background-size: cover!important;
-        }
-        .topdata{width: 100%;}
-        .count-box{
-            font-size: 12px!important;
-        }
-        .boxheight1{
-            height: 25vh!important;
-            .ledgebox{
-                right: 5%;
-                top: 29%;
-            }
-            .circlebox-lx{
-                top: 10%;
-                left: 16%;
-            }
-        }
-        .smboxheight3{
-            height: 19vh!important;
-        }
-        .ledgeright1{
-            margin-left: -3%!important;
-        }
-        .circlebox{
-            padding: 3% 0% 2%!important;
-        }
-        .commonchart{
-            display: none!important;
-        }
-        .smbarbox span{
-            top: 20%!important;
-        }
-        .img_title{width: 30%;}
-        .tophead{
-            padding: 20px 0px 20px!important;;
-        }
-    }
-    .el-table{
-        height: auto!important;
-        min-height: 400px;
-    }
-}
+     .mobilewrapper {
+         &.screenbg {
+             padding: 20px 0
+         }
+         &.userwarp {
+             background-size: cover!important;
+         }
+         .topdata {
+             width: 100%;
+         }
+         .count-box {
+             font-size: 12px!important;
+         }
+         .boxheight1 {
+             height: 25vh!important;
+             .ledgebox {
+                 right: 5%;
+                 top: 29%;
+             }
+             .circlebox-lx {
+                 top: 10%;
+                 left: 16%;
+             }
+         }
+         .smboxheight3 {
+             height: 19vh!important;
+         }
+         .ledgeright1 {
+             margin-left: -3%!important;
+         }
+         .circlebox {
+             padding: 3% 0% 2%!important;
+         }
+         .commonchart {
+             display: none!important;
+         }
+         .smbarbox span {
+             top: 20%!important;
+         }
+         .img_title {
+             width: 30%;
+         }
+         .tophead {
+             padding: 20px 0px 20px!important;
+             ;
+         }
+     }
+     .el-table {
+         height: auto!important;
+         min-height: 400px;
+     }
+ }
