--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -133,6 +133,10 @@
     line-height: 34px;
 }
 
+.marginright-fx {
+    margin-right: -17px;
+}
+
 .xl-querybox {
     .el-input--medium .el-input__inner,
     .el-date-editor.el-input,
@@ -140,13 +144,18 @@
         width: 200px;
     }
     .el-form-item__label {
-        min-width: 78px;
+        width: 78px;
         padding-right: 5px;
     }
 }
 
 .el-dialog__wrapper .dialog-footer {
     border-top: none !important;
+}
+
+.chart-wrapper {
+    padding: 0 15px;
+    height: 276px;
 }
 
 .el-input-number.is-controls-right[class*="medium"] [class*="increase"],
@@ -190,15 +199,22 @@
 .search-box {
     background: #fff;
     padding: 15px 15px 5px;
-    //  box-shadow: 0px 2px 4px #f5f5f5;
     border-bottom: 1px solid #ebeef5;
     border-radius: 4px 4px 0 0;
     .el-form {
+        padding-right: 0;
         .el-form-item {
             margin-bottom: 10px;
-            margin-right: 30px;
+            margin-right: 20px;
+            &:last-child {
+                margin-right: 0;
+            }
         }
     }
+}
+
+.el-upload--picture-card {
+    background-color: #f6f7fa;
 }
 
 .onlyform-box {
@@ -208,6 +224,9 @@
     margin-bottom: 0;
     .el-form .el-form-item {
         margin-bottom: 20px;
+        &:last-child {
+            margin-right: 20px;
+        }
     }
     .el-select {
         width: 100%;
@@ -219,7 +238,7 @@
 }
 
 .el-form {
-    padding-right: 30px;
+    // padding-right: 30px;
     .tablesvgicon {
         margin-right: 2px;
     }
@@ -663,7 +682,7 @@
     font-size: 16px;
     height: auto;
     line-height: normal;
-    padding: 10px 20px 15px;
+    padding: 0px 20px 15px;
 }
 
 .el-tabs__nav-wrap::after {
