--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -142,6 +142,12 @@
     }
 }
 
+.hightsearchbtn {
+    position: absolute;
+    right: 15px;
+    top: 29px;
+}
+
 .el-input-number--medium {
     width: 100%;
     line-height: 32px;
