--- a/src/styles/king.scss
+++ b/src/styles/king.scss
@@ -161,13 +161,16 @@
 }
 
 .el-input--medium .el-input__inner,
-.el-input--small .el-input__inner,.el-range-editor--medium.el-input__inner {
+.el-input--small .el-input__inner,
+.el-range-editor--medium.el-input__inner {
     height: 34px;
     line-height: 34px;
 }
-.el-range-editor--medium .el-range-input{
+
+.el-range-editor--medium .el-range-input {
     font-size: 12px!important;
 }
+
 .marginright-fx {
     margin-right: -17px;
 }
@@ -768,13 +771,15 @@
         background-color: #67c23a;
     }
 }
-.sm-searchbox{
+
+.sm-searchbox {
     position: relative;
-    .hightsearchbtn{
+    .hightsearchbtn {
         top: 0px;
         right: 0;
     }
 }
+
 .marginbottom15 {
     margin-bottom: 15px;
 }
@@ -836,6 +841,7 @@
         margin: 0;
         padding-bottom: 10px;
         span {
+            white-space: nowrap;
             b {
                 font-size: 30px;
                 margin-right: 5px;
@@ -855,16 +861,20 @@
 .el-dialog {
     overflow: hidden;
 }
-.el-date-editor .el-range-separator{
+
+.el-date-editor .el-range-separator {
     width: auto!important;
 }
+
 .floatright {
     float: right;
     margin: 10px 0;
 }
 
 .tabpopover {
-    max-width: 450px;background: #f7f7f7;color: #303133;
+    max-width: 450px;
+    background: #f7f7f7;
+    color: #303133;
     p {
         margin: 0
     }
