--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -114,4 +114,9 @@
             margin: 0px 7px 7px 0px;
         }
     }
+    .hightsearchbtn {
+        position: relative;
+        right: 15px;
+        top: 0px;
+    }
 }
