--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -120,4 +120,11 @@
         right: 15px;
         top: 0px;
     }
+
+    .el-pagination .el-select .el-input {
+        width: 90px;
+        margin: 0 5px!important;
+      
+    }
+    
 }
